--- a/index.css
+++ b/index.css
@@ -105,6 +105,7 @@
     font-family: "Fira Sans";
     font-size: 16px;
     font-weight: 400;
+    cursor: pointer;
     color: white;
 }
 
@@ -122,7 +123,7 @@
 }
 
 .footer {
-    margin-top: 10rem;
+    margin-top: 8rem;
     height: 100px;
 }
 
